Correctly align task checkboxes

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -541,7 +541,7 @@ $blue_due: #4271a6;			// due dates and low importance
 						}
 
 						.task-checkbox {
-							padding: 12px 10px;
+							padding: 11px 10px;
 							height: 44px;
 							width: 44px;
 
